# field_hospital

./: .env.dist  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  mypy.ini  nginx.Dockerfile  nginx.conf  pyproject.toml  readme.md  requirements.txt  web.Dockerfile
.ebextensions/: django.config
.github/workflows/: fh_ci.yml
src/: db.sqlite3  manage.py  requirements.txt
src/.ebextensions/: django.config
src/api/: constants.py  urls.py
src/api/serializers/: authorized_person_serializer.py  drug_serializer.py  event_serializer.py  medical_staff_serializer.py  patient_serializer.py  treatment_serializer.py  user_serializer.py  vital_sign_serializer.py
src/api/views/: authorized_person_view.py  drug_view.py  event_view.py  medical_staff_view.py  patient_view.py  treatment_view.py  user_view.py  vital_sign_view.py
src/core/: __init__.py  asgi.py  checks.py  env.py  settings.py  urls.py  wsgi.py
src/events/: apps.py  constants.py  forms.py  models.py  urls.py  views.py
src/events/forms/: email_choice_form.py  event_forms.py
src/events/migrations/: 0001_initial.py  0002_event_end_date.py  0003_event_description_event_localization_event_name_and_more.py  0004_alter_event_name.py  0005_alter_event_start_date.py  0006_alter_event_start_date.py  0007_alter_event_start_date.py  0008_alter_event_start_date.py  0009_alter_event_start_date.py  0010_alter_event_start_date.py  0011_alter_event_localization_alter_event_start_date.py  0012_alter_event_start_date.py
src/events/tests/: test_events_add_events.py  test_events_all_events.py  test_events_close_events.py  test_events_complete_events.py  test_events_delete_events.py  test_events_detail_events.py  test_events_restore_events.py  test_events_update_events.py
src/events/views/: event_views.py  save_to_pdf.py  send_email_view.py
src/patients/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
src/patients/migrations/: 0001_initial.py  0002_alter_patient_admission_date.py  0003_alter_patient_admission_date.py  0004_alter_patient_admission_date.py  (+33 more)
src/treatment/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py  views.py
src/users/: forms.py  urls.py
(+999 files in other folders)
