[tool.poetry]
name = "field-hospital"
version = "0.1.0"
description = "Project to manage workflow of field hospital. Can add new event, and to this event can add patients. Any patient has his own personal information and medical treatment. Medical info can be created as pdf doc."
authors = ["SzymKam <szymon15kaminski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
arabic-reshaper = "3.0.0"
asgiref = "3.7.2"
asn1crypto = "1.5.1"
boto3 = "1.34.8"
botocore = "1.34.8"
brotli = "1.1.0"
certifi = "2023.7.22"
cffi = "1.16.0"
cfgv = "3.3.1"
charset-normalizer = "3.3.0"
click = "8.1.7"
colorama = "0.4.6"
coverage = "7.3.2"
crispy-bootstrap4 = "2022.1"
cryptography = "41.0.4"
cssselect2 = "0.7.0"
distlib = "0.3.6"
django = "4.2.3"
django-crispy-forms = "2.0"
django-environ = "0.10.0"
django-extensions = "3.2.3"
django-storages = "1.14.2"
django-stubs = "4.2.3"
django-stubs-ext = "4.2.2"
djangorestframework = "3.14.0"
factory-boy = "3.3.0"
faker = "19.3.1"
filelock = "3.12.2"
fonttools = "4.43.1"
gunicorn = "21.2.0"
html5lib = "1.1"
identify = "2.5.24"
idna = "3.4"
isort = "5.12.0"
jmespath = "1.0.1"
lxml = "4.9.3"
mypy = "1.4.1"
mypy-extensions = "1.0.0"
nodeenv = "1.8.0"
numpy = "1.26.3"
oscrypto = "1.3.0"
packaging = "23.1"
pandas = "2.1.4"
pango = "0.0.1"
pillow = "10.0.1"
platformdirs = "3.8.1"
plotly = "5.16.1"
pre-commit = "3.3.3"
psycopg2-binary = "2.9.9"
pycparser = "2.21"
pydyf = "0.8.0"
pyhanko = "0.20.1"
pyhanko-certvalidator = "0.24.1"
pypdf = "3.16.3"
pyphen = "0.14.0"
pypng = "0.20220715.0"
python-bidi = "0.4.2"
python-dateutil = "2.8.2"
pytz = "2023.3"
pyyaml = "6.0.1"
qrcode = "7.4.2"
reportlab = "3.6.13"
requests = "2.31.0"
s3transfer = "0.10.0"
six = "1.16.0"
sqlparse = "0.4.4"
svglib = "1.5.1"
tenacity = "8.2.3"
tinycss2 = "1.2.1"
types-pytz = "2023.3.0.0"
types-pyyaml = "6.0.12.10"
typing-extensions = "4.7.1"
tzdata = "2023.3"
tzlocal = "5.1"
uritools = "4.0.2"
urllib3 = "2.0.6"
virtualenv = "20.23.1"
webencodings = "0.5.1"
xhtml2pdf = "0.2.11"
zopfli = "0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
